--- a/BlazorDroid.Droid/BlazorDroid.Droid.csproj
+++ b/BlazorDroid.Droid/BlazorDroid.Droid.csproj
@@ -80,6 +80,7 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\values\colors.xml" />
+    <AndroidResource Include="Resources\values\dimens.xml" />
     <AndroidResource Include="Resources\values\ic_launcher_background.xml" />
     <AndroidResource Include="Resources\values\strings.xml" />
     <AndroidResource Include="Resources\values\styles.xml" />
